--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 06:05:08 2018</p>
+         Last Run: Mon Nov 26 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,35 +34,35 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
-                        <td>97</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
-                        <td>3</td>
-                        <td>-1</td>
-                        <td>4</td>
-                        <td>74</td>
+                        <td>2</td>
+                        <td>-2</td>
+                        <td>5</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>98</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>3</td>
-                        <td>0</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>4</td>
-                        <td>76</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
-                        <td>99</td>
+                        <td>94</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "-1",
-                 "0"
+                 "-2",
+                 "-2"
                ]
              },
              {
@@ -102,8 +102,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "2",
-                 "3",
-                 "3"
+                 "2",
+                 "2"
                ]
              }
            ]
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "4",
+                 "5",
                  "4"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
-                 "74",
-                 "76"
+                 "75",
+                 "75",
+                 "77"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
-                 "98",
-                 "99"
+                 "96",
+                 "95",
+                 "94"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 06:05:08 2018</p>
+         Last Run: Mon Nov 26 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>13</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -264,20 +264,20 @@
                         <td>73</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>11</td>
+                        <td>W</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-4</td>
-                        <td>-8</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>4</td>
-                        <td>77</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>10</td>
+                        <td>W</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,7 +306,7 @@
                "data":[
                  "-7",
                  "-7",
-                 "-8"
+                 "-7"
                ]
              },
              {
@@ -318,7 +318,7 @@
                "data":[
                  "-3",
                  "-3",
-                 "-4"
+                 "-3"
                ]
              }
            ]
@@ -388,7 +388,7 @@
                "data":[
                  "72",
                  "73",
-                 "77"
+                 "76"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "13",
                  "11",
-                 "10"
+                 "9",
+                 "8"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 06:05:08 2018</p>
+         Last Run: Mon Nov 26 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -464,11 +464,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>6</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>65</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -476,23 +476,23 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>7</td>
-                        <td>66</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>N</td>
-                        <td>63</td>
+                        <td>NNE</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>8</td>
-                        <td>66</td>
+                        <td>7</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>64</td>
+                        <td>61</td>
                      </tr>
                   </tbody>
                </table>
@@ -592,7 +592,7 @@
                "data":[
                  "6",
                  "7",
-                 "8"
+                 "7"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "66",
-                 "66"
+                 "68",
+                 "64",
+                 "64"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
                  "63",
-                 "64"
+                 "60",
+                 "61"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 06:05:08 2018</p>
+         Last Run: Mon Nov 26 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -683,7 +683,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>86</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -691,11 +691,11 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>15</td>
-                        <td>66</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>83</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>8</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>80</td>
+                        <td>82</td>
                      </tr>
                   </tbody>
                </table>
@@ -817,8 +817,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "72",
-                 "66",
-                 "61"
+                 "67",
+                 "62"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "89",
                  "86",
-                 "83",
-                 "80"
+                 "82"
                ]
              }
            ]
