--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 07:05:02 2018</p>
+         Last Run: Mon Nov 26 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>5</td>
-                        <td>75</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>SW</td>
-                        <td>96</td>
+                        <td>SSW</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,7 +46,7 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>5</td>
-                        <td>75</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
@@ -57,12 +57,12 @@
                         <td>Overcast</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>4</td>
-                        <td>77</td>
+                        <td>5</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
-                        <td>94</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -162,7 +162,7 @@
                "data":[
                  "5",
                  "5",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
-                 "75",
-                 "77"
+                 "77",
+                 "77",
+                 "78"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "96",
+                 "97",
                  "95",
-                 "94"
+                 "95"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 07:05:02 2018</p>
+         Last Run: Mon Nov 26 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,14 +246,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-3</td>
-                        <td>-7</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>4</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>11</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -265,7 +265,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
+                 "-6",
                  "-7",
                  "-7"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "-3",
                  "-3"
                ]
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
+                 "73",
                  "73",
                  "76"
                ]
@@ -397,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
-                 "9",
+                 "12",
+                 "10",
                  "8"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 07:05:02 2018</p>
+         Last Run: Mon Nov 26 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -463,23 +463,23 @@
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>68</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>63</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>7</td>
-                        <td>64</td>
+                        <td>5</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NNE</td>
+                        <td>N</td>
                         <td>60</td>
                      </tr>
                      <tr>
@@ -487,8 +487,8 @@
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>7</td>
-                        <td>64</td>
+                        <td>6</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "7",
-                 "7"
+                 "5",
+                 "5",
+                 "6"
                ]
              },
              {
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "68",
-                 "64",
-                 "64"
+                 "65",
+                 "65"
                ]
              },
              {
@@ -612,7 +612,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "63",
+                 "62",
                  "60",
                  "61"
                ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 07:05:02 2018</p>
+         Last Run: Mon Nov 26 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -675,10 +675,10 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>34</td>
+                        <td>23</td>
                         <td>72</td>
                         <td>0</td>
                         <td>10</td>
@@ -695,7 +695,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>86</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>8</td>
-                        <td>62</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>82</td>
+                        <td>84</td>
                      </tr>
                   </tbody>
                </table>
@@ -805,7 +805,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "34",
+                 "23",
                  "15",
                  "8"
                ]
@@ -818,7 +818,7 @@
                "data":[
                  "72",
                  "67",
-                 "62"
+                 "63"
                ]
              },
              {
@@ -828,8 +828,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "89",
-                 "86",
-                 "82"
+                 "87",
+                 "84"
                ]
              }
            ]
