--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 08:05:02 2018</p>
+         Last Run: Mon Nov 26 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -37,32 +37,32 @@
                         <td>77</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>SSW</td>
-                        <td>97</td>
+                        <td>SW</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>5</td>
-                        <td>77</td>
+                        <td>4</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>95</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>2</td>
-                        <td>-2</td>
-                        <td>5</td>
-                        <td>78</td>
+                        <td>3</td>
+                        <td>-1</td>
+                        <td>4</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SW</td>
-                        <td>95</td>
+                        <td>91</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-2",
                  "-2",
-                 "-2"
+                 "-1"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "2",
                  "2",
-                 "2"
+                 "3"
                ]
              }
            ]
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "5",
-                 "5"
+                 "4",
+                 "4"
                ]
              },
              {
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "77",
-                 "77",
-                 "78"
+                 "74",
+                 "75"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
-                 "95",
-                 "95"
+                 "96",
+                 "92",
+                 "91"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 08:05:02 2018</p>
+         Last Run: Mon Nov 26 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,10 +246,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>4</td>
-                        <td>73</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>3</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -260,24 +260,24 @@
                         <td>Clear</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>10</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>4</td>
-                        <td>76</td>
+                        <td>3</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>8</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
+                 "-7",
                  "-7",
                  "-7"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "-3",
                  "-3"
                ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "4"
+                 "3",
+                 "3",
+                 "3"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "72",
                  "73",
-                 "73",
-                 "76"
+                 "75"
                ]
              },
              {
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "12",
-                 "10",
-                 "8"
+                 "11",
+                 "9"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 08:05:02 2018</p>
+         Last Run: Mon Nov 26 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -463,7 +463,7 @@
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>68</td>
                         <td>1</td>
                         <td>8</td>
@@ -475,8 +475,8 @@
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>5</td>
-                        <td>65</td>
+                        <td>6</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
@@ -487,8 +487,8 @@
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>6</td>
-                        <td>65</td>
+                        <td>7</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "6"
+                 "6",
+                 "6",
+                 "7"
                ]
              },
              {
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "68",
-                 "65",
-                 "65"
+                 "64",
+                 "64"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 08:05:02 2018</p>
+         Last Run: Mon Nov 26 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -675,10 +675,10 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>23</td>
+                        <td>34</td>
                         <td>72</td>
                         <td>0</td>
                         <td>10</td>
@@ -695,7 +695,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>87</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -707,7 +707,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>84</td>
+                        <td>82</td>
                      </tr>
                   </tbody>
                </table>
@@ -805,7 +805,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "23",
+                 "34",
                  "15",
                  "8"
                ]
@@ -828,8 +828,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "89",
-                 "87",
-                 "84"
+                 "86",
+                 "82"
                ]
              }
            ]
